Add first lecture.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
 
   <section id="overview">
     <h2>Edition 2020–2021</h2>
+    <h3>
+      11 Feb 2021:
+      <a href="./birds-eye-view/">A Bird’s-Eye View of the Web</a>
+      (<a href="https://ugent-be.zoom.us/rec/share/mPk_8WPkarUh53tIqHEbSKoqdvY1y0dTENjXi2cPjmvokiPNG8TOxo22FtsiYUMV.JpMvmCmb1roz2kks">Video</a>)
+    </h3>
+    <h4>Practicals</h4>
+    <ul>
+      <li><a href="https://github.ugent.be/pages/WebDevelopment/About/">Overview and modalities</a></li>
+      <li><a href="https://github.ugent.be/pages/WebDevelopment/Practicum-1/">Lab 1</a></li>
+    </ul>
+    <h4>Reading materials</h4>
+    <ul>
+      <li><cite><a href="https://www.w3.org/History/1989/proposal.html">Information Management: A Proposal</a> by Tim Berners-Lee</cite></li>
+    </ul>
   </section>
 
   <div class="title slide" id="title">
