--- a/birds-eye-view/index.html
+++ b/birds-eye-view/index.html
@@ -19,6 +19,7 @@
       <a href="https://www.ugent.be/">Ghent University</a> – <a href="https://www.imec.be/">imec</a>
     </p>
     <ul class="links">
+      <li class="video">Lecture: <a href="https://ugent-be.zoom.us/rec/share/mPk_8WPkarUh53tIqHEbSKoqdvY1y0dTENjXi2cPjmvokiPNG8TOxo22FtsiYUMV.JpMvmCmb1roz2kks">Video recording</a></li>
       <li class="prev">Previous topic: <a href="../">Welcome</a></li>
       <li class="next">Next topic: <a href="../architecture/">Web Architecture &amp; Technologies</a></li>
     </ul>
