--- a/architecture/index.html
+++ b/architecture/index.html
@@ -19,6 +19,7 @@
       <a href="https://www.ugent.be/">Ghent University</a> – <a href="https://www.imec.be/">imec</a>
     </p>
     <ul class="links">
+      <li class="video">Lecture: <a href="https://ugent-be.zoom.us/rec/share/Ie25pv7E2AFxzELcBage4U4KsE6EosUwyqdnN2NMsjYKO5TwyDsQPN9VBiD8YEQ.zp23ShDvhHkigx3A">Video recording</a></li>
       <li class="prev">Previous topic: <a href="../birds-eye-view/">A Bird’s-Eye View of the Web</a></li>
       <li class="next">Next topic: <a href="../web-apis/">Web APIs</a></li>
     </ul>
