Add third lecture.

--- a/web-apis/index.html
+++ b/web-apis/index.html
@@ -19,6 +19,7 @@
       <a href="https://www.ugent.be/">Ghent University</a> – <a href="https://www.imec.be/">imec</a>
     </p>
     <ul class="links">
+      <li class="video">Lecture: <a href="https://ugent-be.zoom.us/rec/share/BLPwncH3K28gpFzEFCgA7KbiM4CnthkBzQk-ZA1TEQf9ci_Sd99RRRjLkCRaUzOB.m2b8f1EC9l_-cuNw">Video recording</a></li>
       <li class="prev">Previous topic: <a href="../architecture/">Web Architecture &amp; Technologies</a></li>
       <li class="next">Next topic: <a href="../semantic-web/">The Semantic Web &amp; Linked Data</a></li>
     </ul>
