Add fourth lecture.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
       <a href="./web-apis/">Web APIs</a>
       (<a href="https://ugent-be.zoom.us/rec/share/BLPwncH3K28gpFzEFCgA7KbiM4CnthkBzQk-ZA1TEQf9ci_Sd99RRRjLkCRaUzOB.m2b8f1EC9l_-cuNw">Video</a>)
     </h3>
+
+    <h3>
+      4 Mar 2021:
+      <a href="https://github.ugent.be/pages/WebDevelopment/Hands-on-REST/">Hands-on REST</a>
+      (<a href="https://ugent-be.zoom.us/rec/share/-zg59LXxzi_Gp7Lu1muGdRfNdPDLdirxVCAAi4bdX7wU89shwiI2kstIo8b02IUT.0p0whWky9K_shNeU">Video</a>)
+    </h3>
   </section>
 
   <div class="title slide" id="title">
