--- a/semantic-web/index.html
+++ b/semantic-web/index.html
@@ -19,6 +19,7 @@
       <a href="https://www.ugent.be/">Ghent University</a> – <a href="https://www.imec.be/">imec</a>
     </p>
     <ul class="links">
+      <li class="video">Lecture: <a href="https://ugent-be.zoom.us/rec/share/Hig48gy2ZHg-o-c93BQsU339Dnz6n3vCPFPT4duYVrq7jeY6qUHGkJJvEUhszl8.scxBoWDgmriZb0DA">Video recording</a></li>
       <li class="prev">Previous topic: <a href="../web-apis/">Web APIs</a></li>
       <li class="next">Next topic: <a href="../linked-data-publishing/">Linked Data Publishing</a></li>
     </ul>
