Add sixth lecture.

--- a/linked-data-publishing/index.html
+++ b/linked-data-publishing/index.html
@@ -19,6 +19,7 @@
       <a href="https://www.ugent.be/">Ghent University</a> – <a href="https://www.imec.be/">imec</a>
     </p>
     <ul class="links">
+      <li class="video">Lecture: <a href="https://ugent-be.zoom.us/rec/share/Fd401Uy1PMQKbeMLxMQGDXClROs-2cXk9W2ylE6Cy2V195j8jbNhi0_ES5rrcoqX.8KLewosyVaFPCuaU">Video recording</a></li>
       <li class="prev">Previous topic: <a href="../semantic-web/">The Semantic Web &amp; Linked Data</a></li>
       <li class="next">Next topic: <a href="../decentralization/">Re-decentralizing the Web</a></li>
     </ul>
