--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
       <a href="./linked-data-publishing/">Linked Data Publishing</a>
       (<a href="https://ugent-be.zoom.us/rec/share/Fd401Uy1PMQKbeMLxMQGDXClROs-2cXk9W2ylE6Cy2V195j8jbNhi0_ES5rrcoqX.8KLewosyVaFPCuaU">Video</a>)
     </h3>
+
+    <h3>
+      25 Mar 2021:
+      <a href="./decentralization/">Re-decentralizing the Web</a>
+      (<a href="https://ugent-be.zoom.us/rec/share/0pj2xfJb_3O1fGGb0-acuxZaAKvmDGyvFgT5vWWMZKJDZ5F9XWqk3Dqf9TX6S5ZX.3-_7EY3J9EtRXMLV">Video (Part 1)</a>)
+    </h3>
   </section>
 
   <div class="title slide" id="title">
