Add eighth lecture.

--- a/index.html
+++ b/index.html
@@ -100,8 +100,18 @@
     <h3>
       25 Mar 2021:
       <a href="./decentralization/">Re-decentralizing the Web</a>
-      (<a href="https://ugent-be.zoom.us/rec/share/0pj2xfJb_3O1fGGb0-acuxZaAKvmDGyvFgT5vWWMZKJDZ5F9XWqk3Dqf9TX6S5ZX.3-_7EY3J9EtRXMLV">Video (Part 1)</a>)
+      (<a href="https://ugent-be.zoom.us/rec/share/0pj2xfJb_3O1fGGb0-acuxZaAKvmDGyvFgT5vWWMZKJDZ5F9XWqk3Dqf9TX6S5ZX.3-_7EY3J9EtRXMLV">Video Part 1</a>)
     </h3>
+
+    <h3>
+      1 Apr 2021:
+      <a href="./decentralization/">Re-decentralizing the Web</a>
+      (<a href="https://ugent-be.zoom.us/rec/share/HtJmbbFgQvGdXYnhIIjbrHBTECjZQosVZGLR_dzHYjQS3_sCrMOUumQu5hV9HoS2.3yG1nWsqD0TWGiVp">Video Part 2</a>)
+    </h3>
+    <h4>Practicals</h4>
+    <ul>
+      <li><a href="https://github.ugent.be/pages/WebDevelopment/Practicum-3/">Lab 3</a></li>
+    </ul>
   </section>
 
   <div class="title slide" id="title">
