--- a/decentralization/index.html
+++ b/decentralization/index.html
@@ -19,7 +19,10 @@
       <a href="https://www.ugent.be/">Ghent University</a> – <a href="https://www.imec.be/">imec</a>
     </p>
     <ul class="links">
-      <li class="video">Lecture: <a href="https://ugent-be.zoom.us/rec/share/0pj2xfJb_3O1fGGb0-acuxZaAKvmDGyvFgT5vWWMZKJDZ5F9XWqk3Dqf9TX6S5ZX.3-_7EY3J9EtRXMLV">Video recording (Part 1)</a></li>
+      <li class="video">Lecture:
+        <a href="https://ugent-be.zoom.us/rec/share/0pj2xfJb_3O1fGGb0-acuxZaAKvmDGyvFgT5vWWMZKJDZ5F9XWqk3Dqf9TX6S5ZX.3-_7EY3J9EtRXMLV">Video recording (Part 1)</a>,
+        <a href="https://ugent-be.zoom.us/rec/share/HtJmbbFgQvGdXYnhIIjbrHBTECjZQosVZGLR_dzHYjQS3_sCrMOUumQu5hV9HoS2.3yG1nWsqD0TWGiVp">Video recording (Part 2)</a>
+      </li>
       <li class="prev">Previous topic: <a href="../linked-data-publishing/">Linked Data Publishing</a></li>
     </ul>
   </header>
