Add ninth lecture.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
     <ul>
       <li><a href="https://github.ugent.be/pages/WebDevelopment/Practicum-3/">Lab 3</a></li>
     </ul>
+
+    <h3>
+      22 Apr 2021:
+      Guest lecture by Ruben Taelman
+      (<a href="https://ugent-be.zoom.us/rec/share/1_WK5CxpU1bX9Q6zqf4Q9R4trgwRm8szRGn5ilkpptR1TYCSTpkX8V0Lv4ZaiSAy.kryUEo-zw2QuumDV">Video</a>)
+      <br>
+      <ul>
+        <li><a href="https://www.rubensworks.net/raw/slides/2021/ugent-webfundamentals-sparqlengines/">SPARQL Query Processing</a></li>
+        <li><a href="https://www.rubensworks.net/raw/slides/2021/ugent-webfundamentals-linktraversal/">Link Traversal-based Query Processing</a></li>
+      </ul>
+    </h3>
   </section>
 
   <div class="title slide" id="title">
