Add tenth lecture.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
         <li><a href="https://www.rubensworks.net/raw/slides/2021/ugent-webfundamentals-linktraversal/">Link Traversal-based Query Processing</a></li>
       </ul>
     </h3>
+
+    <h3>
+      29 Apr 2021:
+      Guest lecture by Pieter Colpaert
+      (<a href="https://ugent-be.zoom.us/rec/share/2T3qyuCqpHxcXvUZJtziFqgJ6sevsfryGpBk1WHgUob_xD54U1_Zw9XrI8Yy0fLH.YSa3SdKNKZV_RTNK?startTime=1619682242000">Video</a>)
+      <br>
+      <ul>
+        <li><a href="https://docs.google.com/presentation/d/1MTpOd7NbtFlUq3ymmqPy9Sip1W27x_-5AkLLzK0L8F8/edit#slide=id.g5450449dde_1_45">Open Data</a></li>
+      </ul>
+    </h3>
   </section>
 
   <div class="title slide" id="title">
